criando rota colaborador

--- a/Frontend/src/app/modules/colaborador/pages/colaborador/colaborador.component.html
+++ b/Frontend/src/app/modules/colaborador/pages/colaborador/colaborador.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+<h1>Botao</h1>
+<button></button>
+<p-dialog [visible]="true">
+    <app-colaborador-formulario></app-colaborador-formulario>
+</p-dialog>
