subindo alteraçoes em algumas labels no front

--- a/Frontend/src/app/modules/colaborador/pages/colaborador/colaborador.component.html
+++ b/Frontend/src/app/modules/colaborador/pages/colaborador/colaborador.component.html
@@ -1,6 +1,6 @@
 <div class="col-12 flex justify-content-start">
     <button pButton type="button" icon="ui-icon-plus" class="ui-button-success button-save-new" iconPos="left"
-            label="Nova Doação"></button>
+            label="Novo Colaborador"></button>
 </div>
 <div class="card">
     <p-table [columns]="coluna" [value]="colaboradores" [paginator]="true" [rows]="8" [responsive]="true"
