--- a/Frontend/src/app/modules/gasto/pages/gastos/gastos.component.html
+++ b/Frontend/src/app/modules/gasto/pages/gastos/gastos.component.html
@@ -1,13 +1,16 @@
 <div class="ui-g-8">
-    <form [formGroup]="formPagamento" class="ui-fluid ui-g-8">
+    <form [formGroup]="formGasto" class="ui-fluid ui-g-8">
         <div class="field col-12" style="padding-bottom: 15px">
+            <label>Motivo </label>
             <input type="text" pInputText formControlName="motivo"/>
         </div>
         <div class="field col-12" style="padding-bottom: 15px">
+            <label>Descrição </label>
             <input type="text" pInputText formControlName="descricao"/>
         </div>
         <div class="field col-12" style="padding-bottom: 15px">
-            <p-dropdown formControlName="idColaborador" [filter]="true" [options]="colaboradorDrop" placeholder="Selecione o clientes"
+            <label>Solicitante </label>
+            <p-dropdown formControlName="idColaborador" [filter]="true" [options]="colaboradorDrop" placeholder="Colaborador"
                         appendTo="body">
                 <ng-template let-item pTemplate="item">
                     <div class="ui-helper-clearfix div-itens" >
@@ -28,25 +31,25 @@
             ></p-calendar>
         </div>
         <div class="field col-12" style="padding-bottom: 15px">
-            <label>VALOR</label>
+            <label>Valor </label>
             <p-inputNumber formControlName="valorRetirado" [showButtons]="true" mode="currency" currency="BRL"></p-inputNumber>
         </div>
         <div class="field col-12" style="padding-bottom: 15px">
-            <label>Retirado De</label>
-            <p-dropdown formControlName="retiradoDoPagamento" [options]="pagamentoDrop" placeholder="Selecione o clientes"
+            <label>Retirado De </label>
+            <p-dropdown formControlName="retiradoDoPagamento" [options]="pagamentoDrop" placeholder="Selecione o Pagamento"
                         appendTo="body">
             </p-dropdown>
         </div>
     </form>
     <p-card>
-        <p>Mensalidade R${{valoresGastos.mensalidade}},00</p>
-        <p>Campori R${{valoresGastos.campori}},00</p>
-        <p>Camisa R${{valoresGastos.camisa}},00</p>
-        <p>Doacoes R${{valoresGastos.doacoes}},00</p>
-        <p>Livre R${{valoresGastos.livre}},00</p>
-        <p>AcampEdessa R${{valoresGastos.acampEdessa}},00</p>
-        <p>Caderno R${{valoresGastos.caderno}},00</p>
-        <p>Total R${{valoresGastos.total}},00</p>
+        <p>Mensalidade R$ {{valoresGastos?.mensalidade}},00</p>
+        <p>Campori R$ {{valoresGastos?.campori}},00</p>
+        <p>Camisa R$ {{valoresGastos?.camisa}},00</p>
+        <p>Doacoes R$ {{valoresGastos?.doacoes}},00</p>
+        <p>Livre R$ {{valoresGastos?.livre}},00</p>
+        <p>AcampEdessa R$ {{valoresGastos?.acampEdessa}},00</p>
+        <p>Caderno R$ {{valoresGastos?.caderno}},00</p>
+        <p>Total R$ {{valoresGastos?.total}},00</p>
     </p-card>
 <div class="flex justify-content-end" style="display: flex; justify-content: space-between;">
     <button type="button" pButton icon="pi pi-times" label="Cancelar" (click)="fecharForm()"
