--- a/Frontend/src/app/modules/pagamento-colaborador/pages/pagamento-colaborador/pagamento-colaborador.component.html
+++ b/Frontend/src/app/modules/pagamento-colaborador/pages/pagamento-colaborador/pagamento-colaborador.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g-8">
-    <form [formGroup]="formPagamento" class="ui-fluid ui-g-8">
+    <form [formGroup]="formPagamentoColaborador" class="ui-fluid ui-g-8">
         <div class="field col-12" style="padding-bottom: 15px">
-            <p-dropdown formControlName="idColaborador" [filter]="true" [options]="colaboradorDrop" placeholder="Selecione o clientes"
+            <p-dropdown formControlName="idColaborador" [filter]="true" [options]="colaboradorDrop" placeholder="Selecione o colaborador"
                         appendTo="body">
                 <ng-template let-item pTemplate="item">
                     <div class="ui-helper-clearfix div-itens" >
@@ -11,7 +11,7 @@
             </p-dropdown>
         </div>
         <div class="field col-12" style="padding-bottom: 15px">
-            <p-dropdown formControlName="idPagamento" [options]="pagamentoDrop" placeholder="Selecione o clientes"
+            <p-dropdown formControlName="idPagamento" [options]="pagamentoDrop" placeholder="Selecione o pagamento"
                         appendTo="body">
             </p-dropdown>
         </div>
@@ -21,13 +21,13 @@
         <div style="padding-bottom: 15px">
             <p-checkbox (onChange)="abrirGrid(vizualizar)" name="Retirado de algum lugar?" [binary]="true" formControlName="retiradoLugar"></p-checkbox>
             <div class="p-grid" *ngIf="vizualizar">
-                <p-dropdown formControlName="idPagamento" [options]="pagamentoRetirado" placeholder="Selecione o clientes"
+                <p-dropdown formControlName="idPagamento" [options]="pagamentoRetirado" placeholder="Selecione o pagamento"
                             appendTo="body">
                 </p-dropdown>
             </div>
         </div>
         <div class="field" style="padding-bottom: 15px">
-            <label for="dataPagamento">Data do Pagamento</label>
+            <label for="dataPagamento">Data do Pagamento </label>
             <p-calendar
                 id="dataPagamento"
                 formControlName="dataPagamento"
@@ -38,7 +38,7 @@
             ></p-calendar>
         </div>
         <div class="field col-12" style="padding-bottom: 15px">
-            <label>VALOR</label>
+            <label>VALOR </label>
             <p-inputNumber formControlName="valorPago" [showButtons]="true" mode="currency" currency="BRL"></p-inputNumber>
         </div>
     </form>
