--- a/Frontend/src/app/modules/pagamento-colaborador/pages/pagamentos-colaborador-list/pagamentos-colaborador-list.component.html
+++ b/Frontend/src/app/modules/pagamento-colaborador/pages/pagamentos-colaborador-list/pagamentos-colaborador-list.component.html
@@ -1,9 +1,9 @@
 <div class="col-12 flex justify-content-start">
     <button pButton type="button" icon="ui-icon-plus" class="ui-button-success button-save-new" iconPos="left"
-            label="Nova Doação" (click)="novoPagamento()"></button>
+            label="Novo Pagamento" (click)="novoPagamento()"></button>
 </div>
 <div class="card">
-    <p-table [columns]="colunas" [value]="pagamentoColaborador" [paginator]="true" [rows]="10" [responsive]="true"
+    <p-table [columns]="colunas" [value]="pagamentoColaborador" [paginator]="true" [rows]="5" [responsive]="true"
              sortMode="multiple">
         <ng-template pTemplate="header" let-colunas>
             <tr>
@@ -29,6 +29,13 @@
                     <ng-container *ngIf="isValor(col.field)">
                         <div class="flex icone w100">
                             {{ 'R$ '+ rowData[col.field] + ',00'}}
+                        </div>
+                    </ng-container>
+                    <ng-container *ngIf="col.field === 'acoes' ">
+                        <div class="flex justify-content-center p-0">
+                            <button pButton icon="pi pi-eye"
+                                    class="botao-secundario button-view sem-fundo flex align-items-center justify-content-center m-1"
+                                    (click)="carregar(rowData.id)" ></button>
                         </div>
                     </ng-container>
                 </td>
