--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -1,3 +1,4 @@
-<p-card>
-    <h1>Bem-vindo ao sistema de tesouraria!</h1>
-</p-card>
+<h1>Bem-vindo ao sistema de tesouraria!</h1>
+<div class="align-content-center">
+    <img src="assets/images/maxresdefault.jpg">
+</div>
