--- a/Frontend/src/app/modules/doacao/pages/doacao-list/doacao-list.component.html
+++ b/Frontend/src/app/modules/doacao/pages/doacao-list/doacao-list.component.html
@@ -2,47 +2,15 @@
     <button pButton type="button" icon="ui-icon-plus" class="ui-button-success button-save-new" iconPos="left"
             label="Nova Doação" (click)="novoPagamento()"></button>
 </div>
-<div class="card">
-        <p-table [columns]="coluna" [value]="doacoes" [paginator]="true" [rows]="5" [responsive]="true"
-             sortMode="multiple">
-        <ng-template pTemplate="header" let-colunas>
-            <tr>
-                <th id="titulo-colunas" *ngFor="let col of colunas" [pSortableColumn]="col.field">
-                    {{col.header}}
-                    <ng-container>
-                        <p-sortIcon [field]="col.field"></p-sortIcon>
-                    </ng-container>
-                </th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-rowData let-colunas="columns">
-            <tr>
-                <td *ngFor="let col of colunas">
-                    <ng-container *ngIf="!isData(col.field) && !isValor(col.field)">
-                        {{rowData[col.field]}}
-                    </ng-container>
-                    <ng-container *ngIf="isData(col.field)">
-                        <div class="flex icone w100">
-                            {{rowData[col.field] | date: "dd/MM/yyyy"}}
-                        </div>
-                    </ng-container>
-                    <ng-container *ngIf="isValor(col.field)">
-                        <div class="flex icone w100">
-                            {{ 'R$ '+ rowData[col.field] + ',00'}}
-                        </div>
-                    </ng-container>
-                    <ng-container *ngIf="col.field === 'acoes' ">
-                        <div class="flex justify-content-center p-0">
-                            <button pButton icon="pi pi-eye"
-                                    class="botao-secundario button-view sem-fundo flex align-items-center justify-content-center m-1"
-                                    (click)="carregar(rowData.id)" ></button>
-                        </div>
-                    </ng-container>
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
-</div>
+
+<app-tabela-generica [dados]="doacoes"
+                     [colunas]="coluna"
+                     [rows]="5"
+                     [paginator]="true"
+                     (abrirModal)="carregar($event)"
+                     (deletar)="deletar($event)"
+></app-tabela-generica>
+
 <p-dialog [(visible)]="display" [modal]="true" [contentStyle]="{'max-height':'100%'}" (onHide)="resetarForm()">
     <app-doacao [doacaoList]="doacoes"
                 (respForm)="fecharModal()"></app-doacao>
