--- a/Frontend/src/app/modules/gasto/pages/gastos/gastos.component.html
+++ b/Frontend/src/app/modules/gasto/pages/gastos/gastos.component.html
@@ -1,14 +1,14 @@
 <div class="ui-g-8">
     <form [formGroup]="formGasto" class="ui-fluid ui-g-8">
-        <div class="field col-12" style="padding-bottom: 15px">
+        <div class="field col-6">
             <label>Motivo </label>
             <input type="text" pInputText formControlName="motivo"/>
         </div>
-        <div class="field col-12" style="padding-bottom: 15px">
+        <div class="field col-6">
             <label>Descrição </label>
             <input type="text" pInputText formControlName="descricao"/>
         </div>
-        <div class="field col-12" style="padding-bottom: 15px">
+        <div class="field col-6">
             <label>Solicitante </label>
             <p-dropdown formControlName="idColaborador" [filter]="true" [options]="colaboradorDrop" placeholder="Colaborador"
                         appendTo="body">
@@ -19,7 +19,7 @@
                 </ng-template>
             </p-dropdown>
         </div>
-        <div class="field" style="padding-bottom: 15px">
+        <div class="field col-6">
             <label for="dataDispesa">Data do Pagamento</label>
             <p-calendar
                 id="dataDispesa"
@@ -30,11 +30,11 @@
                 [defaultDate]="dataRegistro"
             ></p-calendar>
         </div>
-        <div class="field col-12" style="padding-bottom: 15px">
+        <div class="field col-6">
             <label>Valor </label>
             <p-inputNumber formControlName="valorRetirado" [showButtons]="true" mode="currency" currency="BRL"></p-inputNumber>
         </div>
-        <div class="field col-12" style="padding-bottom: 15px">
+        <div class="field col-6">
             <label>Retirado De </label>
             <p-dropdown formControlName="retiradoDoPagamento" [options]="pagamentoDrop" placeholder="Selecione o Pagamento"
                         appendTo="body">
@@ -42,14 +42,14 @@
         </div>
     </form>
     <p-card>
-        <p>Mensalidade R$ {{valoresGastos?.mensalidade}},00</p>
-        <p>Campori R$ {{valoresGastos?.campori}},00</p>
-        <p>Camisa R$ {{valoresGastos?.camisa}},00</p>
-        <p>Doacoes R$ {{valoresGastos?.doacoes}},00</p>
-        <p>Livre R$ {{valoresGastos?.livre}},00</p>
-        <p>AcampEdessa R$ {{valoresGastos?.acampEdessa}},00</p>
-        <p>Caderno R$ {{valoresGastos?.caderno}},00</p>
-        <p>Total R$ {{valoresGastos?.total}},00</p>
+        <p>Mensalidade R$ {{valoresGastos.mensalidade}},00</p>
+        <p>Campori R$ {{valoresGastos.campori}},00</p>
+        <p>Camisa R$ {{valoresGastos.camisa}},00</p>
+        <p>Doacoes R$ {{valoresGastos.doacoes}},00</p>
+        <p>Livre R$ {{valoresGastos.livre}},00</p>
+        <p>AcampEdessa R$ {{valoresGastos.acampEdessa}},00</p>
+        <p>Caderno R$ {{valoresGastos.caderno}},00</p>
+        <p>Total R$ {{valoresGastos.total}},00</p>
     </p-card>
 <div class="flex justify-content-end" style="display: flex; justify-content: space-between;">
     <button type="button" pButton icon="pi pi-times" label="Cancelar" (click)="fecharForm()"
