--- a/Frontend/src/app/pages/app/app.component.html
+++ b/Frontend/src/app/pages/app/app.component.html
@@ -3,6 +3,7 @@
     <div class="corpo-aplicacao">
         <app-sidemenu [configuracaoMenuLateral]="configuracaoMenuLateral"></app-sidemenu>
         <div class="conteudo-principal">
+            <p-toast></p-toast>
             <router-outlet></router-outlet>
         </div>
     </div>
