subindo imagens do inicio

--- a/Frontend/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/pages/inicio/inicio.component.html
@@ -1,4 +1,4 @@
 <h1>Bem-vindo ao sistema de tesouraria!</h1>
-<div class="align-content-center">
-    <img src="assets/images/maxresdefault.jpg">
+<div>
+    <img src="assets/images/logo.png" class="imagem-log">
 </div>
