--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,6 +1,8 @@
 @import "assets/css/variaveis-globais.css";
 @import "assets/fonts/Kreon/font-kreon.css";
 @import "assets/fonts/Reem_Kufi/font-reem-kufi.css";
+@import "assets/css/sobrescritas-primeng";
+@import "assets/css/estilizacoes-globais";
 
 html, body {
     margin: 0;
