acrescimo do envio de email e tambem do envio de SMS

--- a/Frontend/src/app/modules/colaborador/pages/colaborador-form/colaborador-form.component.html
+++ b/Frontend/src/app/modules/colaborador/pages/colaborador-form/colaborador-form.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="area flex">
         <div class="field col-6">
-            <label>Esta Pagando</label>
+            <label>Unidade</label>
             <p-dropdown formControlName="idUnidade" [options]="dropdownUnidade"
                         placeholder="Selecione a Unidade"
                         appendTo="body">
