--- a/Frontend/src/app/modules/gasto/pages/gastos/gastos.component.html
+++ b/Frontend/src/app/modules/gasto/pages/gastos/gastos.component.html
@@ -10,11 +10,12 @@
         </div>
         <div class="field col-12">
             <label>Solicitante </label>
-            <p-dropdown formControlName="idColaborador" [filter]="true" [options]="colaboradorDrop" placeholder="Colaborador"
+            <p-dropdown formControlName="idColaborador" [filter]="true" [options]="colaboradorDrop"
+                        placeholder="Colaborador"
                         appendTo="body">
                 <ng-template let-item pTemplate="item">
-                    <div class="ui-helper-clearfix div-itens" >
-                        <div class= "nome-colaborador">{{item.label}}</div>
+                    <div class="ui-helper-clearfix div-itens">
+                        <div class="nome-colaborador">{{item.label}}</div>
                     </div>
                 </ng-template>
             </p-dropdown>
@@ -34,36 +35,30 @@
             </div>
             <div class="field col-6">
                 <label>Valor R$</label>
-                <p-inputNumber formControlName="valorRetirado" [min]="0" [showButtons]="true" mode="currency" currency="BRL"></p-inputNumber>
+                <p-inputNumber formControlName="valorRetirado" [min]="0" [showButtons]="true" mode="currency"
+                               currency="BRL"></p-inputNumber>
             </div>
         </div>
         <div class="field col-12">
             <label>Retirado De </label>
-            <p-dropdown formControlName="retiradoDoPagamento" [options]="pagamentoDrop" placeholder="Selecione o  tipo do pagamento"
+            <p-dropdown formControlName="retiradoDoPagamento" [options]="pagamentoDrop"
+                        placeholder="Selecione o  tipo do pagamento"
                         appendTo="body">
             </p-dropdown>
         </div>
     </form>
-    <p-card class="card-tipo-pag col-12 pt-0">
-        <div class="area flex justify-content-around">
-            <div>
-                <p>Mensalidade R$ {{valoresGastos.mensalidade}},00</p>
-                <p>Campori R$ {{valoresGastos.campori}},00</p>
-                <p>Camisa R$ {{valoresGastos.camisa}},00</p>
-                <p>Doacoes R$ {{valoresGastos.doacoes}},00</p>
-            </div>
-            <div>
-                <p>Livre R$ {{valoresGastos.livre}},00</p>
-                <p>AcampEdessa R$ {{valoresGastos.acampEdessa}},00</p>
-                <p>Caderno R$ {{valoresGastos.caderno}},00</p>
-                <p>Total R$ {{valoresGastos.total}},00</p>
-            </div>
-        </div>
-    </p-card>
-<div class="flex justify-content-end" style="display: flex; justify-content: space-between;">
-    <button type="button" pButton icon="pi pi-times" label="Cancelar" (click)="fecharForm()"
-            class="ui-button-secondary mr-3"></button>
-    <button type="button" pButton icon="pi pi-check" label="Salvar" (click)="this.salvarFormulario()"
-            class="button-save-new"></button>
-</div>
+    <div class="field col-12">
+        <p>Total: {{modificarValor(valoresGastos.total)}}</p>
+        <app-tabela-generica [dados]="valoresGastos.nomePagamento"
+                             [colunas]="colunas"
+                             [paginator]="true"
+                             [rows]="5"
+        ></app-tabela-generica>
+    </div>
+    <div class="flex justify-content-end" style="display: flex; justify-content: space-between;">
+        <button type="button" pButton icon="pi pi-times" label="Cancelar" (click)="fecharForm()"
+                class="ui-button-secondary mr-3"></button>
+        <button type="button" pButton icon="pi pi-check" label="Salvar" (click)="this.salvarFormulario()"
+                class="button-save-new"></button>
+    </div>
 </div>
